crates/pixi_command_dispatcher/src/source_build/snapshots/pixi_command_dispatcher__source_build__tests__missing_output_empty_variant.snap
---
source: crates/pixi_command_dispatcher/src/source_build/mod.rs
expression: error.to_string()
---
The build backend did not provide the requested output for package 'scipy' with variant { }

Available variants for scipy:
  - {"python":"3.10"}
  - {"python":"3.11"}
