crates/pixi_command_dispatcher/src/source_build/snapshots/pixi_command_dispatcher__source_build__tests__missing_output_no_matching_package.snap
---
source: crates/pixi_command_dispatcher/src/source_build/mod.rs
expression: error.to_string()
---
The build backend did not provide the requested output for package 'scipy' with variant {"python":"3.11"}

Other available packages:
  - numpy
  - tensorflow
