crates/pixi_command_dispatcher/src/source_build/snapshots/pixi_command_dispatcher__source_build__tests__missing_output_with_matching_package_name.snap
---
source: crates/pixi_command_dispatcher/src/source_build/mod.rs
expression: error.to_string()
---
The build backend did not provide the requested output for package 'scipy' with variant {"blas":"mkl","python":"3.11"}

Available variants for scipy:
  - {"blas":"mkl","python":"3.10"}  ← 1/2 keys match
  - {"blas":"openblas","python":"3.11"}  ← 1/2 keys match
  - {"blas":"mkl","python":"3.12"}  ← 1/2 keys match
